--- a/specs/10x-RNA-v2/spec.yaml
+++ b/specs/10x-RNA-v2/spec.yaml
@@ -12,7 +12,23 @@ library_protocol: null
 library_kit: null
 sequence_protocol: Illumina
 sequence_kit: null
-sequence_spec: []
+sequence_spec:
+- !Read
+  read_id: R1.fastq.gz
+  name: Read 1
+  modality: illumina_truseq_prep
+  primer_id: generic_primer1
+  min_len: 1
+  max_len: 250
+  strand: pos
+- !Read
+  read_id: R2.fastq.gz
+  name: Read 2
+  modality: illumina_truseq_prep
+  primer_id: generic_primer2
+  min_len: 1
+  max_len: 250
+  strand: neg
 library_spec:
 - !Region
   region_id: rna
@@ -61,7 +77,7 @@ library_spec:
       region_type: barcode
       name: Cell Barcode
       sequence_type: onlist
-      sequence: NNNNNNNNNNNNNNNN
+      sequence: null 
       min_len: 16
       max_len: 16
       onlist: !Onlist
