--- a/specs/Seq-well/spec.yaml
+++ b/specs/Seq-well/spec.yaml
@@ -14,7 +14,23 @@ library_protocol: null
 library_kit: null
 sequence_protocol: null
 sequence_kit: null
-sequence_spec: []
+sequence_spec:
+- !Read
+  read_id: R1.fastq.gz
+  name: Read 1
+  modality: illumina_truseq_prep
+  primer_id: generic_primer1
+  min_len: 1
+  max_len: 250
+  strand: pos
+- !Read
+  read_id: R2.fastq.gz
+  name: Read 2
+  modality: illumina_truseq_prep
+  primer_id: generic_primer2
+  min_len: 1
+  max_len: 250
+  strand: neg
 library_spec:
 - !Region
   region_id: RNA
